src/bindgen.rs

pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_UNKNOWN:
    rasqal_graph_pattern_operator = 0;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_BASIC:
    rasqal_graph_pattern_operator = 1;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_OPTIONAL:
    rasqal_graph_pattern_operator = 2;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_UNION:
    rasqal_graph_pattern_operator = 3;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_GROUP:
    rasqal_graph_pattern_operator = 4;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_GRAPH:
    rasqal_graph_pattern_operator = 5;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_FILTER:
    rasqal_graph_pattern_operator = 6;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_LET:
    rasqal_graph_pattern_operator = 7;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_SELECT:
    rasqal_graph_pattern_operator = 8;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_SERVICE:
    rasqal_graph_pattern_operator = 9;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_MINUS:
    rasqal_graph_pattern_operator = 10;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_VALUES:
    rasqal_graph_pattern_operator = 11;
pub const rasqal_graph_pattern_operator_RASQAL_GRAPH_PATTERN_OPERATOR_LAST:
    rasqal_graph_pattern_operator = 11;
/// rasqal_graph_pattern_operator:
/// @RASQAL_GRAPH_PATTERN_OPERATOR_BASIC: Just triple patterns and constraints.
/// @RASQAL_GRAPH_PATTERN_OPERATOR_OPTIONAL: Set of graph patterns (ANDed) and constraints.
/// @RASQAL_GRAPH_PATTERN_OPERATOR_UNION: Set of graph patterns (UNIONed) and constraints.
/// @RASQAL_GRAPH_PATTERN_OPERATOR_GROUP: Set of graph patterns (ANDed) and constraints.
/// @RASQAL_GRAPH_PATTERN_OPERATOR_GRAPH: A graph term + a graph pattern and constraints.
/// @RASQAL_GRAPH_PATTERN_OPERATOR_FILTER: A filter graph pattern with an expression
/// @RASQAL_GRAPH_PATTERN_OPERATOR_LET: LET ?var := Expression (LAQRS)
/// @RASQAL_GRAPH_PATTERN_OPERATOR_SELECT: SELECT graph pattern
/// @RASQAL_GRAPH_PATTERN_OPERATOR_SERVICE: SERVICE graph pattern
/// @RASQAL_GRAPH_PATTERN_OPERATOR_MINUS: MINUS graph pattern
/// @RASQAL_GRAPH_PATTERN_OPERATOR_VALUES: VALUES graph pattern
/// @RASQAL_GRAPH_PATTERN_OPERATOR_UNKNOWN: Internal.
/// @RASQAL_GRAPH_PATTERN_OPERATOR_LAST: Internal.
///
/// Graph pattern operators
pub type rasqal_graph_pattern_operator = u32;
/// rasqal_graph_pattern_visit_fn:
/// @query: #rasqal_query containing the graph pattern
/// @gp: current graph_pattern
/// @user_data: user data passed in
///
/// User function to visit an graph_pattern and operate on it with
/// rasqal_graph_pattern_visit() or rasqal_query_graph_pattern_visit()
///
/// Return value: non-0 to truncate the visit
pub type rasqal_graph_pattern_visit_fn = ::std::option::Option<
    unsafe extern "C" fn(
        query: *mut rasqal_query,
        gp: *mut rasqal_graph_pattern,
        user_data: *mut libc::c_void,
    ) -> libc::c_int,
>;
extern "C" {
    pub fn rasqal_new_world() -> *mut rasqal_world;
}
extern "C" {
    pub fn rasqal_world_open(world: *mut rasqal_world) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_free_world(world: *mut rasqal_world);
}
extern "C" {
    pub fn rasqal_world_set_raptor(world: *mut rasqal_world, raptor_world_ptr: *mut raptor_world);
}
extern "C" {
    pub fn rasqal_world_get_raptor(world: *mut rasqal_world) -> *mut raptor_world;
}
extern "C" {
    pub fn rasqal_world_set_log_handler(
        world: *mut rasqal_world,
        user_data: *mut libc::c_void,
        handler: raptor_log_handler,
    );
}
extern "C" {
    pub fn rasqal_world_set_default_generate_bnodeid_parameters(
        world: *mut rasqal_world,
        prefix: *mut libc::c_char,
        base: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_world_set_generate_bnodeid_handler(
        world: *mut rasqal_world,
        user_data: *mut libc::c_void,
        handler: rasqal_generate_bnodeid_handler,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_world_set_warning_level(
        world: *mut rasqal_world,
        warning_level: libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_world_get_query_results_format_description(
        world: *mut rasqal_world,
        counter: libc::c_uint,
    ) -> *const raptor_syntax_description;
}
extern "C" {
    pub fn rasqal_world_guess_query_results_format_name(
        world: *mut rasqal_world,
        uri: *mut raptor_uri,
        mime_type: *const libc::c_char,
        buffer: *const libc::c_uchar,
        len: usize,
        identifier: *const libc::c_uchar,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn rasqal_features_enumerate(
        world: *mut rasqal_world,
        feature: rasqal_feature,
        name: *mut *const libc::c_char,
        uri: *mut *mut raptor_uri,
        label: *mut *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_get_feature_count() -> libc::c_uint;
}
extern "C" {
    pub fn rasqal_feature_from_uri(
        world: *mut rasqal_world,
        uri: *mut raptor_uri,
    ) -> rasqal_feature;
}
extern "C" {
    pub fn rasqal_feature_value_type(feature: rasqal_feature) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_world_get_query_language_description(
        world: *mut rasqal_world,
        counter: libc::c_uint,
    ) -> *const raptor_syntax_description;
}
extern "C" {
    pub fn rasqal_languages_enumerate(
        world: *mut rasqal_world,
        counter: libc::c_uint,
        name: *mut *const libc::c_char,
        label: *mut *const libc::c_char,
        uri_string: *mut *const libc::c_uchar,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_language_name_check(
        world: *mut rasqal_world,
        name: *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_new_query(
        world: *mut rasqal_world,
        name: *const libc::c_char,
        uri: *const libc::c_uchar,
    ) -> *mut rasqal_query;
}
extern "C" {
    pub fn rasqal_free_query(query: *mut rasqal_query);
}
extern "C" {
    pub fn rasqal_query_get_name(query: *mut rasqal_query) -> *const libc::c_char;
}
extern "C" {
    pub fn rasqal_query_get_label(query: *mut rasqal_query) -> *const libc::c_char;
}
extern "C" {
    pub fn rasqal_query_set_feature(
        query: *mut rasqal_query,
        feature: rasqal_feature,
        value: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_set_feature_string(
        query: *mut rasqal_query,
        feature: rasqal_feature,
        value: *const libc::c_uchar,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_get_feature(
        query: *mut rasqal_query,
        feature: rasqal_feature,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_get_feature_string(
        query: *mut rasqal_query,
        feature: rasqal_feature,
    ) -> *const libc::c_uchar;
}
extern "C" {
    pub fn rasqal_query_get_verb(query: *mut rasqal_query) -> rasqal_query_verb;
}
extern "C" {
    pub fn rasqal_query_get_wildcard(query: *mut rasqal_query) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_set_wildcard(query: *mut rasqal_query, wildcard: libc::c_int);
}
extern "C" {
    pub fn rasqal_query_get_distinct(query: *mut rasqal_query) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_set_distinct(query: *mut rasqal_query, distinct_mode: libc::c_int);
}
extern "C" {
    pub fn rasqal_query_get_explain(query: *mut rasqal_query) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_set_explain(query: *mut rasqal_query, is_explain: libc::c_int);
}
extern "C" {
    pub fn rasqal_query_get_limit(query: *mut rasqal_query) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_set_limit(query: *mut rasqal_query, limit: libc::c_int);
}
extern "C" {
    pub fn rasqal_query_get_offset(query: *mut rasqal_query) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_set_offset(query: *mut rasqal_query, offset: libc::c_int);
}
extern "C" {
    pub fn rasqal_query_add_data_graph(
        query: *mut rasqal_query,
        data_graph: *mut rasqal_data_graph,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_add_data_graphs(
        query: *mut rasqal_query,
        data_graphs: *mut raptor_sequence,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_get_data_graph_sequence(query: *mut rasqal_query) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_data_graph(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_data_graph;
}
extern "C" {
    pub fn rasqal_query_dataset_contains_named_graph(
        query: *mut rasqal_query,
        graph_uri: *mut raptor_uri,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_add_variable(
        query: *mut rasqal_query,
        var: *mut rasqal_variable,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_get_bound_variable_sequence(
        query: *mut rasqal_query,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_describe_sequence(query: *mut rasqal_query) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_anonymous_variable_sequence(
        query: *mut rasqal_query,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_all_variable_sequence(query: *mut rasqal_query)
        -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_variable(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_variable;
}
extern "C" {
    pub fn rasqal_query_has_variable2(
        query: *mut rasqal_query,
        type_: rasqal_variable_type,
        name: *const libc::c_uchar,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_has_variable(
        query: *mut rasqal_query,
        name: *const libc::c_uchar,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_set_variable2(
        query: *mut rasqal_query,
        type_: rasqal_variable_type,
        name: *const libc::c_uchar,
        value: *mut rasqal_literal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_set_variable(
        query: *mut rasqal_query,
        name: *const libc::c_uchar,
        value: *mut rasqal_literal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_get_triple_sequence(query: *mut rasqal_query) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_triple(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_triple;
}
extern "C" {
    pub fn rasqal_query_add_prefix(
        query: *mut rasqal_query,
        prefix: *mut rasqal_prefix,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_get_prefix_sequence(query: *mut rasqal_query) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_prefix(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_prefix;
}
extern "C" {
    pub fn rasqal_query_get_order_conditions_sequence(
        query: *mut rasqal_query,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_order_condition(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_query_get_group_conditions_sequence(
        query: *mut rasqal_query,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_group_condition(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_query_get_having_conditions_sequence(
        query: *mut rasqal_query,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_having_condition(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_expression;
}
